[gd_scene load_steps=50 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run5.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run10.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run14.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run13.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run11.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run8.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run7.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/run/run9.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/jump/jump1.png" type="Texture" id=22]
[ext_resource path="res://Scenes/PlayableCharacters/PlayerCamera.tscn" type="PackedScene" id=23]
[ext_resource path="res://Script/Players/EnergyController.gd" type="Script" id=24]
[ext_resource path="res://Script/Players/LifeController.gd" type="Script" id=25]
[ext_resource path="res://Sprites/HUD/Life.png" type="Texture" id=26]
[ext_resource path="res://Sprites/HUD/energybar.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/jump/jump2.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/fall/fall2.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/fall/fall1.png" type="Texture" id=30]
[ext_resource path="res://Scenes/PlayableCharacters/SwampShooterProjectile.tscn" type="PackedScene" id=31]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/crouch-shoot/crouch-shoot3.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/crouch/crouch2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/crouch-shoot/crouch-shoot2.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/crouch/crouch3.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/crouch-shoot/crouch-shoot1.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/hurt/Hurt2.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/shoot/shoot1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/shoot/shoot3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/shoot/shoot2.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/hurt/Hurt1.png" type="Texture" id=41]
[ext_resource path="res://Script/Players/SwampShooter/SwampShooter.gd" type="Script" id=42]
[ext_resource path="res://Script/Players/SwampShooter/SwampShooterStateMachine.gd" type="Script" id=43]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/stand.png" type="Texture" id=44]
[ext_resource path="res://Scenes/PlayableCharacters/Grenade.tscn" type="PackedScene" id=45]
[ext_resource path="res://Scenes/Menu/Pause.tscn" type="PackedScene" id=46]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 37 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 28 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 29 ) ],
"loop": true,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 35 ) ],
"loop": false,
"name": "crouch",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk",
"speed": 18.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 34 ), ExtResource( 32 ) ],
"loop": false,
"name": "crouch-shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 40 ), ExtResource( 39 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 2 ) ],
"loop": false,
"name": "heavy-attack",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 16.0

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SwampShooter" instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 22
script = ExtResource( 42 )
shoot_projectile = ExtResource( 31 )
grenade_scene = ExtResource( 45 )

[node name="Body" parent="." index="0"]
position = Vector2( 0, -27 )

[node name="Sprite" parent="Body" index="0"]
frames = SubResource( 1 )
animation = "crouch"
frame = 1
playing = true

[node name="DetectFloorRaycast" type="Node2D" parent="Body" index="1"]

[node name="RayCast2D" type="RayCast2D" parent="Body/DetectFloorRaycast" index="0"]
position = Vector2( 0, 27 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2147483650

[node name="ShootPosUp" type="Position2D" parent="Body" index="2"]
position = Vector2( 28, -10 )

[node name="ShootPosCrouch" type="Position2D" parent="Body" index="3"]
position = Vector2( 28, 0 )

[node name="GrenadePos" type="Position2D" parent="Body" index="4"]
position = Vector2( -7, 6 )

[node name="CheckGunWallCollision" type="RayCast2D" parent="Body" index="5"]
position = Vector2( 5, -10 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="CheckGunWallCollisionCrouch" type="RayCast2D" parent="Body" index="6"]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -2, -16 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Invincible = SubResource( 3 )

[node name="StateMachine" parent="." index="3"]
script = ExtResource( 43 )

[node name="CoyoteTimer" type="Timer" parent="." index="4"]
wait_time = 0.2
one_shot = true

[node name="Camera2D" parent="." index="5" instance=ExtResource( 23 )]

[node name="HurtedTimerControl" type="Timer" parent="." index="6"]
wait_time = 0.3
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="8"]

[node name="LifeController" type="Node2D" parent="CanvasLayer" index="0"]
position = Vector2( 23, 19 )
script = ExtResource( 25 )
life_texture = ExtResource( 26 )

[node name="EnergyController" type="Node2D" parent="CanvasLayer" index="1"]
position = Vector2( 23, 29 )
script = ExtResource( 24 )
energy_texture = ExtResource( 27 )

[node name="Timer" type="Timer" parent="CanvasLayer/EnergyController" index="0"]

[node name="Pause" parent="CanvasLayer" index="2" instance=ExtResource( 46 )]
visible = false
[connection signal="animation_finished" from="Body/Sprite" to="StateMachine" method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Body/Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/EnergyController/Timer" to="CanvasLayer/EnergyController" method="_on_Timer_timeout"]
